# federated-k-means

./: .gitignore  DataGenerator.ipynb  README.md  data.txt  kmeans_test.py  normal_data_generation.py
ExampleEnclave/src/app/: CMakeLists.txt  Makefile  app.cpp  bank1.cpp  bank1.h  bank2.cpp  bank2.h  bank3.cpp  bank3.h  cmake_install.cmake  data_testing.h  enclave_attestation.cpp  enclave_attestation.h  enclave_u.c  enclave_u.h
ExampleEnclave/src/app/Oblivious/: ObliviousDefs.h  __oblivious_impl.h  omemory.h
ExampleEnclave/src/app/attestation_utils/: ias_ra.cpp  network_ra.cpp
covert-cpp/: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE.txt  README.md  THANKYOU.txt
covert-cpp/cmake/: CMakeLists.txt  covert-cpp-config.cmake.in
covert-cpp/docs/: CMakeLists.txt  Contents.md  Development.md  FutureProjects.md  Install.md  LanguageReference.md  NVT.md  Refactoring.md  Requirements.md  Tutorial.md  doxygen.cfg.in
covert-cpp/examples/: CMakeLists.txt  examples.h
covert-cpp/examples/chi2/: CMakeLists.txt  MPC.h  MPC_log.h  main.cpp
covert-cpp/examples/knn/: CMakeLists.txt  covert_knn.cpp  download.cmake  knn.cpp  knn.h  knn_test.c  main.py  oblivious_knn.cpp
covert-cpp/examples/memcmp/: CMakeLists.txt  main.cpp  memcmp.cpp  memcmp.h  nvt_test.cpp
covert-cpp/include/: CMakeLists.txt
covert-cpp/include/Covert/: CMakeLists.txt  CovertO.h  CovertSTL.h  __covert_helpers.h  __covert_o_impl.h
covert-cpp/include/NVT/: CMakeLists.txt  NVT.h
covert-cpp/include/Oblivious/: odeque.h  olist.h
covert-cpp/lib/: CMakeLists.txt
covert-cpp/lib/Oblivious/: Allocator.cpp  CMakeLists.txt  Oblivious.c
covert-cpp/test/: CMakeLists.txt
covert-cpp/test/Covert/: CMakeLists.txt  lit.cfg  lit.gen.cfg.in  lit.site.cfg.in
covert-cpp/test/Covert/Concepts/: InputIteratorTest.cpp
covert-cpp/test/Covert/Core/: AddressOfTest.cpp  AddressOfTestFail.cpp  ArithmeticIncrementTest.cpp  ArithmeticIncrementTestFail.cpp  BinaryArithmeticAssignmentTest.cpp  BinaryArithmeticAssignmentTestFail.cpp  BinaryArithmeticTest.cpp  BinaryArithmeticTestFail.cpp  BinaryLogicTest.cpp  BinaryLogicTestFail.cpp  CastingFail.cpp  ClassInitializeTest.cpp  CommaOperatorTest.cpp  ConstCastTest.cpp  ConstCastTestFail.cpp  ConstexprTest.cpp  ConstexprTestFail.cpp  ConvertingConstructorCanonicalizePointerTest.cpp  ConvertingConstructorCanonicalizePointerTestFail.cpp  ConvertingConstructorCovertTest.cpp  ConvertingConstructorCovertTestFail.cpp  ConvertingConstructorPrimitiveTest.cpp  ConvertingConstructorPrimitiveTestFail.cpp  CopyAssignmentTest.cpp  CopyAssignmentTestFail.cpp  CopyConstructorTest.cpp  CopyConstructorTestFail.cpp  CovertImplicitCanonicalCastTest.cpp  CovertImplicitCanonicalCastTestFail.cpp  CovertPropertiesTest.cpp  DefaultConstructorTest.cpp  DefaultConstructorTestFail.cpp  DynamicCastTest.cpp  DynamicCastTestFail.cpp  FunctionPointerTest.cpp  GuardTest.cpp  GuardTestFail.cpp  ImplicitConversionTest.cpp  ImplicitConversionTestFail.cpp  LabelCastTest.cpp  (+32 more)
covert-cpp/test/Covert/CovertSTL/: Algorithm.cpp  TernaryTest.cpp
covert-cpp/test/Covert/MetaFunction/: CanonicalizeTest.cpp  ConstructCovertTest.cpp  CovertConversionTest.cpp  CovertTest.cpp  GetLabelsTest.cpp  IsPrimitiveTest.cpp  LabelsTest.cpp  ListTest.cpp  TypeDepthTest.cpp  UnwrapTest.cpp
covert-cpp/test/Covert/Oblivious/: BidirectionalIteratorTest.cpp  BidirectionalIteratorTestFail.cpp  CanonicalizeTest.cpp  ConstructorTest.cpp  ConstructorTestFail.cpp  ConvertTest.cpp  ConvertTestFail.cpp  ForwardIteratorTest.cpp  InputIteratorTest.cpp  IteratorTest.cpp  RandomAccessIteratorTest.cpp  RandomAccessIteratorTestFail.cpp  ReadWriteTest.cpp  ReadWriteTestFail.cpp
covert-cpp/test/Covert/STL/: ArrayTest.cpp  ArrayTestFail.cpp  DequeTest.cpp  DequeTestFail.cpp  ForwardListTest.cpp  ForwardListTestFail.cpp  ListTest.cpp  ListTestFail.cpp  ListTestFail2.cpp  SetTest.cpp  SetTestFail.cpp  VectorTest.cpp  VectorTestFail.cpp
covert-cpp/test/Covert/include/: MPCLattice.h
covert-cpp/test/Noninterference/: CMakeLists.txt  CovertO.cpp  heap.cpp  lit.cfg  lit.gen.cfg.in  lit.site.cfg.in  storage.c  ternary.cpp
covert-cpp/test/Noninterference/Algorithm/: CMakeLists.txt  any_of.cpp  find.cpp  find_if.cpp  max_element.cpp  sort.cpp
covert-cpp/test/Noninterference/Oblivious/: CMakeLists.txt  o_copy.cpp  o_read.cpp  o_swap.cpp  o_write.cpp  ofind_if.cpp  omax_element.cpp  osort.cpp
covert-cpp/test/Tools/: CMakeLists.txt  check_refactor_tool.py.in  lit.cfg  lit.gen.cfg.in  lit.site.cfg.in
covert-cpp/test/Tools/C2CPP/: ImplicitCastTest.c  KeywordsTest.c  QualnameTest.c  lit.local.cfg
covert-cpp/test/Tools/CPP2Covert/: CastingTest.cpp  DeclTest.cpp  ErrorsTest.cpp  KeywordTest.cpp  MissingHeaderLinkedTest.cpp  MissingHeaderTest.cpp  NestedNameSpecifierTest.cpp  SecretOnlyTest.cpp  StmtTest.cpp  lit.local.cfg
covert-cpp/test/Tools/Oblivious/: AlgorithmTest.cpp  AllocatorTest.cpp  CMakeLists.txt  CTest.c  ContiguousAllocatorTest.cpp  CopyTest.cpp  DequeTest.cpp  ForwardListTest.cpp  ListTest.cpp  OBidirectionalIteratorTest.cpp  OForwardIteratorTest.cpp  OInputIteratorTest.cpp  OIteratorTest.cpp  OOutputIteratorTest.cpp  ORandomAccessIteratorTest.cpp  OTest.cpp  PageAllocatorTest.cpp  ReadTest.cpp  SwapTest.cpp  VectorTest.cpp  WriteTest.cpp  lit.local.cfg
covert-cpp/test/Tools/include/: Test.h
covert-cpp/test/modules/: dynamic_test.py
covert-cpp/tools/: CMakeLists.txt  run-refactor.py
covert-cpp/tools/c2cpp/: C2CPP.cpp  CMakeLists.txt  CppCheckFactory.cpp  CppCheckFactory.h  CppImplicitCastCheck.cpp  CppImplicitCastCheck.h  CppKeywordCheck.cpp  CppKeywordCheck.h  CppQualNameCheck.cpp  CppQualNameCheck.h
covert-cpp/tools/cpp2covert/: CMakeLists.txt  CPP2Covert.cpp
covert-cpp/tools/include/: CovertTools.h  ICheck.h
covert-cpp/tools/include/Diagnostic/: DiagnosticConsumerCOR.h  FixItReplacementConsumer.h
covert-cpp/tools/include/NVT/: NVTCommon.h
covert-cpp/tools/lib/: CMakeLists.txt
covert-cpp/tools/lib/Diagnostic/: CMakeLists.txt  (+2 more)
covert-cpp/tools/nvt/: CMakeLists.txt
covert-cpp/tools/utils/: CMakeLists.txt
(+87 files in other folders)
